cmake_minimum_required(VERSION 3.14)
project(LeetCode C)

set(CMAKE_C_STANDARD 11)

add_executable(1 1.c)
add_executable(2 2.c)
add_executable(3 3.c)
add_executable(7 7.c)
add_executable(9 9.c)
add_executable(13 13.c)
add_executable(14 14.c)
add_executable(20 20.c)
add_executable(21 21.c)
add_executable(26 26.c)
add_executable(27 27.c)
add_executable(35 35.c)
add_executable(38 38.c)
add_executable(122 122.c)